--- a/app/src/main/res/layout/activity_my_menu.xml
+++ b/app/src/main/res/layout/activity_my_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".HomeFeed">
+    tools:context=".HomeActivities.HomeFeed">
 
     <LinearLayout
         android:id="@+id/topLayout"
@@ -29,7 +29,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:lineSpacingExtra="0.7sp"
             android:textColor="@color/light_olive_green"
