--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -4,4 +4,8 @@
         android:id="@+id/go_mymenu"
         android:icon="@android:drawable/ic_menu_view"
         android:title="내 정보" />
+    <item
+        android:id="@+id/messages"
+        android:icon="@android:drawable/ic_menu_view"
+        android:title="쪽지함" />
 </menu>
