--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -12,180 +12,196 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ScrollView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/swipe_layout">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/card"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="3dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/dp_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="390dp"
-                        android:layout_gravity="center"
-                        android:visibility="gone"
-                        app:srcCompat="@drawable/splash_img" />
-
-
-                    <TextView
-                        android:id="@+id/dp_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:text="Title"
-                        android:textSize="35sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/dp_user_id"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_weight="1"
-                        android:textSize="15sp"
-                        android:text="@string/hint_user_id"
-                        android:textStyle="bold"/>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/button2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginRight="5dp"
-                            android:layout_marginBottom="10dp"
-                            android:background="@drawable/my_button"
-                            android:fontFamily="sans-serif"
-                            android:onClick="onClicksendMessage"
-                            android:text="쪽지 보내기"
-                            android:textColor="@android:color/white"
-                            android:textStyle="bold" />
-
-                        <ImageView
-                            android:id="@+id/btn_like"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginTop="20dp"
-                            android:layout_marginEnd="10dp"
-                            android:onClick="onClickLike"
-                            app:srcCompat="@drawable/like" />
-                    </RelativeLayout>
-
-                    <TextView
-                        android:id="@+id/dp_posted_time"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
-
-                        android:text="Tme" />
-
-                    <TextView
-                        android:id="@+id/dp_body"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:text="body"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <Button
-                        android:id="@+id/find_location"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/light_olive_green"
-                        android:text="음식점 위치 검색하기"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/note"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginBottom="20dp"
-                        android:gravity="center_horizontal"
-                        android:lineSpacingExtra="0.7sp"
-                        android:text="상품 거래 관련 문의(거래 장소, 시간 등)를 원하시면\n해당 글 게시자에게 쪽지를 보내주세요!"
-                        android:textAlignment="gravity"
-                        android:textColor="@color/light_olive_green"
-                        android:textIsSelectable="false"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/input_comment_context"
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="댓글 쓰기" />
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="3dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/dp_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="390dp"
+                            android:layout_gravity="center"
+                            android:visibility="gone"
+                            app:srcCompat="@drawable/splash_img" />
+
+
+                        <TextView
+                            android:id="@+id/dp_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="Title"
+                            android:textSize="35sp"
+                            android:textStyle="bold" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/dp_user_id"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_weight="1"
+                                android:text="@string/hint_user_id"
+                                android:textSize="15sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/dp_posted_time"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginRight="5dp"
+
+                                android:layout_weight="1"
+                                android:text="Tme"
+                                android:textAlignment="textEnd" />
+                        </LinearLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/button2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_marginBottom="10dp"
+                                android:background="@drawable/my_button"
+                                android:fontFamily="sans-serif"
+                                android:onClick="onClicksendMessage"
+                                android:text="쪽지 보내기"
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold" />
+
+                            <ImageView
+                                android:id="@+id/btn_like"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginTop="20dp"
+                                android:layout_marginEnd="10dp"
+                                android:onClick="onClickLike"
+                                app:srcCompat="@drawable/like" />
+                        </RelativeLayout>
+
+                        <TextView
+                            android:id="@+id/dp_body"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:text="body"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <Button
+                            android:id="@+id/find_location"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/light_olive_green"
+                            android:text="음식점 위치 검색하기"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:visibility="gone" />
+
+                        <TextView
+                            android:id="@+id/note"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
+                            android:gravity="center_horizontal"
+                            android:lineSpacingExtra="0.7sp"
+                            android:text="상품 거래 관련 문의(거래 장소, 시간 등)를 원하시면\n해당 글 게시자에게 쪽지를 보내주세요!"
+                            android:textAlignment="gravity"
+                            android:textColor="@color/light_olive_green"
+                            android:textIsSelectable="false"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:visibility="gone" />
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/input_comment_context"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="댓글 쓰기" />
+
+                    <Button
+                        android:id="@+id/btn_comment_input"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:onClick="onClickwriteComment"
+                        android:text="입력" />
+                </LinearLayout>
+
+                <ListView
+                    android:id="@+id/list_comments"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="@null">
+
+                </ListView>
 
                 <Button
-                    android:id="@+id/btn_comment_input"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/postDelete"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:onClick="onClickwriteComment"
-                    android:text="입력" />
+                    android:background="@color/colorAccent"
+                    android:onClick="deletePostAffirm"
+                    android:text="삭제하기"
+                    android:visibility="gone" />
+
             </LinearLayout>
+        </ScrollView>
 
-            <ListView
-                android:id="@+id/list_comments"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:divider="@null">
-
-            </ListView>
-
-            <Button
-                android:id="@+id/postDelete"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorAccent"
-                android:onClick="deletePostAffirm"
-                android:text="삭제하기"
-                android:visibility="gone" />
-
-        </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>>
 
 
 </LinearLayout>
