--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -103,6 +103,7 @@
                                 android:layout_marginBottom="10dp"
                                 android:layout_toStartOf="@+id/btn_like"
                                 android:background="@drawable/plane"
+                                android:visibility="gone"
                                 android:onClick="onClicksendMessage" />
 
                             <ImageView
