--- a/app/src/main/res/layout/activity_detailed_message.xml
+++ b/app/src/main/res/layout/activity_detailed_message.xml
@@ -15,19 +15,16 @@
         android:text="sada">
     </com.beardedhen.androidbootstrap.BootstrapLabel>
 
-    <ScrollView
-        android:layout_below="@id/detailed_message_label"
-        android:id="@id/detailed_message_linearlayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
 
-        <LinearLayout
+        <android.support.v4.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-
+            android:layout_below="@+id/detailed_message_label"
+            android:layout_above="@+id/context_layout_in_detailed_message"
+            android:id="@+id/swipe_layout">
             <ListView
+
                 android:id="@+id/detailed_message_listview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -36,11 +33,12 @@
                 android:divider="@null">
 
             </ListView>
-        </LinearLayout>
-    </ScrollView>
+       </android.support.v4.widget.SwipeRefreshLayout>
+
 
 
     <LinearLayout
+        android:id="@+id/context_layout_in_detailed_message"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
