--- a/app/src/main/res/layout/activity_my_messages.xml
+++ b/app/src/main/res/layout/activity_my_messages.xml
@@ -33,7 +33,10 @@
             android:layout_gravity="center"
             android:text="쪽지가 없습니다!"
             android:visibility="gone" />
-
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/swipe_layout">
         <ListView
             android:id="@+id/message_listview"
             android:layout_width="match_parent"
@@ -43,7 +46,7 @@
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp">
 
-        </ListView>
+        </ListView></android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
 </LinearLayout>
