--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -56,7 +56,7 @@
                             android:layout_marginRight="5dp"
                             android:layout_marginBottom="5dp"
                             android:text="Title"
-                            android:textSize="35sp"
+                            android:textSize="24sp"
                             android:textStyle="bold" />
 
                         <LinearLayout
@@ -127,7 +127,7 @@
                             android:layout_marginBottom="10dp"
                             android:text="body"
                             android:textSize="18sp"
-                            android:textStyle="bold" />
+                            android:textStyle="normal" />
 
                         <Button
                             android:id="@+id/find_location"
