--- a/app/src/main/res/layout/item_comments.xml
+++ b/app/src/main/res/layout/item_comments.xml
@@ -54,7 +54,7 @@
                     android:layout_marginTop="5dp"
                     android:text="comment"
                     android:textSize="15sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="normal" />
 
                 <ImageButton
                     android:id="@+id/btn_comment_delete"
