--- a/app/src/main/res/layout/activity_posting_eatout.xml
+++ b/app/src/main/res/layout/activity_posting_eatout.xml
@@ -235,7 +235,8 @@
                         android:layout_weight="1"
                         android:ems="10"
                         android:hint="추천 이유를 입력하세요"
-                        android:inputType="textPersonName"
+                        android:inputType="textMultiLine"
+                        android:scrollHorizontally="false"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.503"
                         app:layout_constraintStart_toStartOf="parent"
@@ -253,7 +254,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -270,8 +271,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="이 음식점에 대한 기타 정보를 입력하세요(추천 메뉴, 가격대, 후기 등)"
-                android:inputType="textPersonName"
+                android:hint="(추천 메뉴, 가격대, 후기 등)"
+                android:inputType="textMultiLine"
+                android:maxLength="150"
+                android:scrollHorizontally="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.503"
                 app:layout_constraintStart_toStartOf="parent"
