--- a/app/src/main/res/layout/activity_posting_transaction.xml
+++ b/app/src/main/res/layout/activity_posting_transaction.xml
@@ -206,7 +206,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
@@ -224,7 +224,8 @@
                         android:layout_weight="0"
                         android:ems="10"
                         android:hint="기타 정보를 입력하세요"
-                        android:inputType="textPersonName" />
+                        android:inputType="textMultiLine"
+                        android:scrollHorizontally="false" />
 
                 </LinearLayout>
             </com.beardedhen.androidbootstrap.BootstrapWell>
