--- a/app/src/main/res/layout/item_feeds.xml
+++ b/app/src/main/res/layout/item_feeds.xml
@@ -59,6 +59,8 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="5dp"
+                        android:ellipsize="end"
+                        android:maxLines="5"
                         android:text="Write here"
                         android:textStyle="bold" />
                 </LinearLayout>
